--- a/frontend/src/css/MilkGallery.css
+++ b/frontend/src/css/MilkGallery.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
-
+    gap: 60px;
+    background-color: #ffe3e2;
 }
