milk details page

--- a/frontend/src/css/MilkGallery.css
+++ b/frontend/src/css/MilkGallery.css
@@ -5,3 +5,10 @@
     gap: 60px;
     background-color: #ffe3e2;
 }
+
+.searchAndfilters {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;;
+
+}
