--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,11 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
+ #root {
+   /* max-width: 1280px; */
+  /*margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: center; */
+  background-color: #ffe3e2;
 }
-
+/*
 .logo {
   height: 6em;
   padding: 1.5em;
